refactor: fix some tests issues